--- a/webBanTiVi/src/main/resources/templates/admin/page/customer/customer.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/customer/customer.html
@@ -1,12 +1,79 @@
 <h4 class="fw-semibold py-3 mb-4"> Danh sách khách hàng </h4>
 <div class="row mb-4">
-    <div class="col-lg-3 col-md-6">
-        <button class="btn btn-success w-100"><span class="tf-icon bx bx-plus mx-2"></span>Thêm khách hàng</button>
+    <div class="col-lg-3 col-md-3 col-sm-3 col-3">
+        <button class="btn btn-success w-100" onclick="" data-bs-toggle="modal" data-bs-target="#create-customer"><span class="tf-icon bx bx-plus mx-2"></span>Thêm khách hàng</button>
     </div>
-    <div class="col-lg-3 col-md-6">
+    <div class="modal fade" id="create-customer" tabindex="-1" style="display: none;" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Thông tin khách hàng</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-lg-4 col-md-12 col-sm-12 col-xl-3">
+                            <img th:src="@{/admin/assets/img/elements/20.jpg}" src="" class="w-px-200">
+                        </div>
+                        <div class="row col-lg-8 col-xl-9">
+                            <div class="col-xl-4 col-lg-6 col-md-6">
+                                <div class="mb-3">
+                                    <label for="nameKH" class="form-label">Họ
+                                        tên:</label>
+                                    <input type="text" class="form-control">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="diachi" class="form-label">Địa chỉ:</label>
+                                    <textarea type="text" class="form-control"></textarea>
+                                </div>
+                            </div>
+                            <div class="col-xl-4 col-lg-6 col-md-6">
+                                <div class="mb-3">
+                                    <label class="form-label" for="sdt">Số điện thoại</label>
+                                    <input type="text" class="form-control">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="nameKH" class="form-label">Giới tính:</label>
+                                    <select type="text" class="form-select">
+                                        <option>
+                                            Nam
+                                        </option>
+                                        <option>
+                                            Nữ
+                                        </option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-xl-4 col-lg-6 col-md-6">
+                                <div class="mb-3">
+                                    <label class="form-label" for="ngaysinh">Ngày sinh</label>
+                                    <input class="form-control" type="date">
+                                </div>
+                                <div class="mb-3">
+                                    <label class="form-label" for="hangKH">Hạng khách hàng</label>
+                                    <select class="form-select">
+                                        <option>Vàng</option>
+                                        <option>Bạc</option>
+                                        <option>Đồng</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
+                        Close
+                    </button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-3 col-3">
         <button class="btn btn-warning w-100"><span class="tf-icon bx bx-export mx-2"></span>Xuất file excel</button>
     </div>
-    <div class="col-lg-3 col-md-6">
+    <div class="col-lg-3 col-md-3 col-sm-3 col-3">
         <button class="btn btn-primary w-100"><span class="tf-icon bx bx-import mx-2"></span>Nhập file excel</button>
     </div>
 </div>
@@ -85,14 +152,53 @@
                         </div>
                         <div class="modal-body">
                             <div class="row">
-                                <div class="col mb-3">
-                                    <div class="col-lg-4">
-                                        <img th:src="@{/admin/assets/img/elements/20.jpg}" src="" class="w-px-200">
+                                <div class="col-lg-4 col-md-12 col-sm-12 col-xl-3">
+                                    <img th:src="@{/admin/assets/img/elements/20.jpg}" src="" class="w-px-200">
+                                </div>
+                                <div class="row col-lg-8 col-xl-9">
+                                    <div class="col-xl-4 col-lg-6 col-md-6">
+                                        <div class="mb-3">
+                                            <label for="nameKH" class="form-label">Họ
+                                                tên:</label>
+                                            <input type="text" class="form-control" id="nameKH">
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="diachi" class="form-label">Địa chỉ:</label>
+                                            <textarea type="text" class="form-control" id="diachi"></textarea>
+                                        </div>
+                                    </div>
+                                    <div class="col-xl-4 col-lg-6 col-md-6">
+                                        <div class="mb-3">
+                                            <label class="form-label" for="sdt">Số điện thoại</label>
+                                            <input type="text" class="form-control" id="sdt">
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="nameKH" class="form-label">Giới tính:</label>
+                                            <select type="text" class="form-select" id="gioitinh">
+                                                <option>
+                                                    Nam
+                                                </option>
+                                                <option>
+                                                    Nữ
+                                                </option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-xl-4 col-lg-6 col-md-6">
+                                        <div class="mb-3">
+                                            <label class="form-label" for="ngaysinh">Ngày sinh</label>
+                                            <input class="form-control" type="date" id="ngaysinh">
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label" for="hangKH">Hạng khách hàng</label>
+                                            <select class="form-select" id="hangKH">
+                                                <option>Vàng</option>
+                                                <option>Bạc</option>
+                                                <option>Đồng</option>
+                                            </select>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="row g-2">
-
                             </div>
                         </div>
                         <div class="modal-footer">
