--- a/webBanTiVi/src/main/resources/templates/user/page/_order/_order_processing.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/_order/_order_processing.html
@@ -1,9 +1,9 @@
 
 <div class="container ">
     <section class="VYJdTQ" aria-role="tablist"><h2 class="a11y-hidden"></h2>
-        <a class="OFl2GI gAImis" title="Tất cả" aria-role="tab" aria-selected="true" aria-controls="olp_panel_id-0.8223048832128013" id="olp_tab_id-0.8223048832128013" href="/completed">
+        <a class="OFl2GI gAImis" title="Tất cả" aria-role="tab" aria-selected="true" aria-controls="olp_panel_id-0.8223048832128013" id="olp_tab_id-0.8223048832128013" href="/layout_order/completed">
             <span class="_20hgQK">Tất cả</span></a>
-        <a class="OFl2GI" title="Chờ thanh toán" aria-role="tab" aria-selected="false" aria-controls="olp_panel_id-0.9555926117255007" id="olp_tab_id-0.9555926117255007" href="/processing"><span
+        <a class="OFl2GI" title="Chờ thanh toán" aria-role="tab" aria-selected="false" aria-controls="olp_panel_id-0.9555926117255007" id="olp_tab_id-0.9555926117255007" href="/layout_order/processing"><span
                 class="_20hgQK">Chờ thanh toán</span></a>
         <a class="OFl2GI" title="Hoàn thành" aria-role="tab" aria-selected="false" aria-controls="olp_panel_id-0.6349019586241271" id="olp_tab_id-0.6349019586241271" href="/user/purchase/?type=3">
             <span class="_20hgQK">Hoàn thành</span></a>
@@ -119,4 +119,5 @@
                 </div>
             </section>
         </div>
-    </div></div>
+    </div>
+</div>
