--- a/webBanTiVi/src/main/resources/static/user/css/_order/_order_return.css
+++ b/webBanTiVi/src/main/resources/static/user/css/_order/_order_return.css
@@ -1,50 +1,214 @@
-.required {
-  color: red;
+div.a11y-hidden, h1.a11y-hidden, h2.a11y-hidden, h3.a11y-hidden, h4.a11y-hidden, span.a11y-hidden {
+  position: absolute;
+  left: -9999px;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
 }
-input {
-  border: 3px solid black;
-  margin-bottom: 10px;
-  margin-top: 10px;
+.cBtCqV_return {
+  padding: 20px 24px;
+  font-size: 14px;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
 }
-.container {
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
+.yO9lYJ {
+  display: flex;
+  margin-right: 16px;
+  color: rgba(0,0,0,.54);
+  border: 0;
+  background: none;
+  padding: 0;
 }
-.heading-bar {
-  font-size: 18px;
-  background: #fff;
-  padding-bottom: 10px;
-  padding-top: 5px;
+.yO9lYJ>span, .yO9lYJ>svg {
+  line-height: 16px;
+  vertical-align: bottom;
+}
+.w8MDQX_return{
+  display: flex;
+  text-align: center;
+  padding-left: 200px;
+  font-size: 20px;
+}
+._5sTIHk {
+  padding: 0 12px 0 20px;
+  display: flex;
+  flex-direction: row-reverse;
+  min-width: 58px;
+  box-sizing: border-box;
+}
+.stardust-checkbox {
+  font-family: -apple-system,HelveticaNeue-Light,Helvetica Neue Light,Helvetica Neue,Helvetica,Roboto,Droid Sans,Arial,sans-serif;
+  font-weight: 300;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  cursor: default;
+  position: relative;
+  color: rgba(0,0,0,.54);
+  max-width: 400px;
+}
+input[type=checkbox], input[type=radio] {
+  box-sizing: border-box;
+  padding: 0;
+}
+.stardust-checkbox__input {
+  opacity: 0;
+  top: 0;
+  left: 0;
+  position: absolute;
+}
+.stardust-checkbox__box {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  position: relative;
+  width: 16px;
+  height: 16px;
+  flex-shrink: 0;
+  border-radius: 2px;
+  border: 1px solid rgba(0,0,0,.14);
+  text-align: center;
+  box-shadow: inset 0 2px 0 0 rgba(0,0,0,.02);
+  margin-right: 8px;
+}
+.SFF7z2 {
+  height: 3.75rem;
+  box-sizing: border-box;
+  border-bottom: 1px solid rgba(0,0,0,.09);
+  padding: 0 20px;
+}
+._0RxYUS, .SFF7z2 {
+  display: flex;
+  align-items: center;
+}
+.xP1eaK {
+  display: flex;
+  align-items: center;
+  flex: 1;
+}
+._5sTIHk {
+  padding: 0 12px 0 20px;
+  display: flex;
+  flex-direction: row-reverse;
+  min-width: 58px;
+  box-sizing: border-box;
+  padding-top :10px
+}
+.stardust-checkbox {
+   font-family: -apple-system,HelveticaNeue-Light,Helvetica Neue Light,Helvetica Neue,Helvetica,Roboto,Droid Sans,Arial,sans-serif;
+   font-weight: 300;
+   font-size: 12px;
+   display: flex;
+   align-items: center;
+   cursor: default;
+   position: relative;
+   color: rgba(0,0,0,.54);
+   max-width: 400px;
+ }
+input[type=checkbox], input[type=radio] {
+  box-sizing: border-box;
+  padding: 0;
+}
+.stardust-checkbox__input {
+  opacity: 0;
+  top: 0;
+  left: 0;
+  position: absolute;
+}
+.stardust-checkbox__box {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  position: relative;
+  width: 16px;
+  height: 16px;
+  flex-shrink: 0;
+  border-radius: 2px;
+  border: 1px solid rgba(0,0,0,.14);
+  text-align: center;
+  box-shadow: inset 0 2px 0 0 rgba(0,0,0,.02);
+  margin-right: 8px;
+}
+.wJCpl6 {
+  text-decoration: none;
+  color: rgba(0,0,0,.87);
+  font-weight: 500;
+  min-width: 50px;
+  display: flex;
+  align-items: center;
+}
+a {
+  cursor: pointer;
+}
+a {
+  text-decoration: none;
+}
+a {
+  background-color: initial;
+}
+.zoXdNN {
+  display: flex;
+  align-items: center;
+}
+.stardust-checkbox__input {
+  opacity: 0;
+  top: 0;
+  left: 0;
+  position: absolute;
+}
+.lgcEHJ {
+  padding: 0 12px 0 20px;
+  display: flex;
+  flex-direction: row-reverse;
+  min-width: 58px;
+  box-sizing: border-box;
+}
+.stardust-checkbox {
+  font-family: -apple-system,HelveticaNeue-Light,Helvetica Neue Light,Helvetica Neue,Helvetica,Roboto,Droid Sans,Arial,sans-serif;
+  font-weight: 300;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  cursor: default;
+  position: relative;
+  color: rgba(0,0,0,.54);
+  max-width: 400px;
+}
+input[type=checkbox], input[type=radio] {
+  box-sizing: border-box;
+  padding: 0;
+}
+.stardust-checkbox__input {
+  opacity: 0;
+  top: 0;
+  left: 0;
+  position: absolute;
+}
+.stardust-checkbox__box {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  position: relative;
+  width: 16px;
+  height: 16px;
+  flex-shrink: 0;
+  border-radius: 2px;
+  border: 1px solid rgba(0,0,0,.14);
+  text-align: center;
+  box-shadow: inset 0 2px 0 0 rgba(0,0,0,.02);
+  margin-right: 8px;
+}
+.cBtCqV_return_1 {
+  padding: 20px 24px;
+  font-size: 14px;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.w8MDQX_return_1 {
+  display: flex;
+  text-align: center;
   font-size: 16px;
 }
-.text-center {
-  font-size: 30px;
-  font-weight: bold;
-  font-family: times;
-}
-.form-control {
-  display: block;
-  width: 100%;
-  height: calc(1.5em + 0.75rem + 2px);
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #495057;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #ced4da;
-  border-radius: 0.5rem;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-select {
-   margin-bottom: 10px;
-  margin-top: 10px;
-}
- #button {
-    border: 1px solid black;
-    background-color: black;
-    color:white;
-    
- }
