--- a/webBanTiVi/src/main/resources/templates/user/layout.html
+++ b/webBanTiVi/src/main/resources/templates/user/layout.html
@@ -29,6 +29,9 @@
     <link rel="stylesheet" th:href="@{/user/css/_order/_order_processing.css}">
     <link rel="stylesheet" th:href="@{/user/css/_order/_order_completed.css}">
     <link rel="stylesheet" th:href="@{/user/css/_order/_order_return.css}">
+    <link rel="stylesheet" th:href="@{/user/css/_order/_order_detail.css}">
+    <link rel="stylesheet" th:href="@{/user/css/_order/_order_return.css}">
+    <link rel="stylesheet" th:href="@{/user/css/_order/article.css}">
 
 
     <style>
@@ -45,7 +48,9 @@
             </div>
             <div class="content-wrapper">
                 <div class="container-xxl flex-grow-1 container-p-y">
-                    <div th:replace="~{${session.pageView}}"></div>
+                    <div th:replace="~{${session.pageView}}">
+
+                    </div>
                 </div>
 
                 <div th:replace="~{/user/layout/_footer.html}"></div>
