Oanh update sidebar admin

--- a/webBanTiVi/src/main/resources/templates/admin/layout.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout.html
@@ -17,7 +17,7 @@
     <meta name="description" content=""/>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" th:href="@{/admin/assets/img/favicon/favicon.ico}"/>
+    <link rel="icon" type="image/x-icon" th:href="@{/admin/assets/img/favicon/logobig6-03.png}"/>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
