--- a/webBanTiVi/src/main/resources/templates/admin/page/customer/rank_customer.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/customer/rank_customer.html
@@ -21,7 +21,7 @@
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="descriptive">Trạng thái</label>
-                        <select id="active" class="form-select">
+                        <select id="active" class="form-select select2">
                             <option>Hoạt động</option>
                             <option>Không hoạt động</option>
                         </select>
