--- a/webBanTiVi/src/main/resources/templates/admin/page/direct_sales/directSales.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/direct_sales/directSales.html
@@ -15,7 +15,7 @@
     <meta name="description" content=""/>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" th:href="@{/admin/assets/img/favicon/favicon.ico}"/>
+    <link rel="icon" type="image/x-icon" th:href="@{/admin/assets/img/favicon/logobig6-03.png}"/>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
@@ -54,7 +54,7 @@
         <div class="layout-page">
             <!-- Navbar -->
             <nav
-                    class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
+                    class="layout-navbar navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
                     id="layout-navbar"
             >
                 <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
@@ -137,11 +137,10 @@
                 </div>
             </nav>
             <!-- / Navbar -->
-
             <!-- Content wrapper -->
             <div class="content-wrapper">
                 <!-- Content -->
-                <div class="container-xxl flex-grow-1 container-p-y">
+                <div class="flex-grow-1 container-p-y mx-3">
                     <div class="row">
                         <div class="col-xl-9 col-md-9">
                             <!--Giỏ sản phẩm -->
@@ -305,7 +304,7 @@
                                                     <div class="col-md-5 mb-xl-3 mb-3">
                                                         <label class="form-label" for="selectGender">Gender</label>
                                                         <div class="input-group input-group-merge">
-                                                            <select class="form-select form-control"
+                                                            <select class="form-select form-control select2"
                                                                     style="width: 100%;" id="selectGender">
                                                                 <option value="HN">Male</option>
                                                                 <option value="NB">Female</option>
