--- a/webBanTiVi/src/main/resources/static/admin/assets/css/app.css
+++ b/webBanTiVi/src/main/resources/static/admin/assets/css/app.css
@@ -11,8 +11,6 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 14px;
-    font-family: 'Poppins', sans-serif;
-    background: #dfe3f2;
 }
 
 .cards {
@@ -75,18 +73,18 @@ body {
 /*    margin-top: 20px;*/
 /*}*/
 
-form .select {
+.dropzone .select {
     color: #5256ad;
     margin-left: 7px;
     cursor: pointer;
 }
 
-form input {
+.dropzone input {
     display: none;
 
 }
 
-form .dragover {
+.dropzone .dragover {
     border-style: solid;
     font-size: 2rem;
     color: #c8c9dd;
@@ -108,16 +106,18 @@ form .dragover {
 }
 
 .container .image {
-    height: 85px;
-    width: 85px;
+    height: 120px;
+    width: 120px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
     overflow: hidden;
     position: relative;
-    margin-bottom: 7px;
-    margin-right: 7px;
+    margin: 7px 7px 7px 7px !important;
+    /*margin-bottom: 7px;*/
+    /*margin-right: 7px !important;*/
+    /*margin-left: 7px !important;*/
+    object-fit: contain;
 }
-
 .container .image:nth-child(4n) {
     margin-right: 0;
 }
@@ -138,4 +138,20 @@ form .dragover {
 
 .container .image span:hover {
     opacity: 0.8;
+}
+.form-dropzone{
+    width: 100%;
+    height: 100px;
+    border-radius: 5px;
+    border: 2px dashed #d5d5e1;
+    color: #c8c9dd;
+    font-size: 0.9rem;
+    font-weight: 500;
+    background: rgba(223, 227, 242, 0.35);
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+    margin-top: 20px;
 }
