--- a/webBanTiVi/src/main/resources/templates/admin/page/customer/customer.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/customer/customer.html
@@ -1,8 +1,8 @@
 <h4 class="fw-semibold py-3 mb-4"> Danh sách khách hàng </h4>
-<div class="row mb-4">
-    <div class="col-lg-3 col-md-3 col-sm-3 col-3">
-        <button class="btn btn-success w-100" onclick="" data-bs-toggle="modal" data-bs-target="#create-customer"><span class="tf-icon bx bx-plus mx-2"></span>Thêm khách hàng</button>
-    </div>
+<div class="mb-4">
+    <button class="btn btn-success w-auto me-4" data-bs-toggle="modal" data-bs-target="#create-customer"><span
+            class="tf-icon bx bx-plus"></span>Thêm khách hàng
+    </button>
     <div class="modal fade" id="create-customer" tabindex="-1" style="display: none;" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
@@ -70,12 +70,6 @@
             </div>
         </div>
     </div>
-    <div class="col-lg-3 col-md-3 col-sm-3 col-3">
-        <button class="btn btn-warning w-100"><span class="tf-icon bx bx-export mx-2"></span>Xuất file excel</button>
-    </div>
-    <div class="col-lg-3 col-md-3 col-sm-3 col-3">
-        <button class="btn btn-primary w-100"><span class="tf-icon bx bx-import mx-2"></span>Nhập file excel</button>
-    </div>
 </div>
 <div class="card mb-3 ">
     <div class="card-header">
@@ -99,13 +93,22 @@
                 </div>
             </div>
         </form>
-        <div class="row mt-4 form-check">
-            <div class="col-md-2">
-                <span><b class="text-danger">3</b>  Khách hàng</span>
-            </div>
-        </div>
     </div>
     <div class="card-body">
+        <div class="row">
+            <div class="col-md-2 d-flex align-items-center">
+                <span><b class="text-danger">3</b>  Hóa đơn</span>
+            </div>
+            <div class="col-md-10 text-end">
+                <div class="btn-group" role="group" aria-label="First group">
+                    <button type="button" class="btn btn-outline-secondary">Excel
+                    </button>
+                    <button type="button" class="btn btn-outline-secondary">PDF
+                    </button>
+                    <button type="button" class="btn btn-outline-secondary">In</button>
+                </div>
+            </div>
+        </div>
         <hr>
         <div class="table-responsive text-nowrap">
             <table class="table table-hover">
