--- a/webBanTiVi/src/main/resources/templates/admin/page/product/product.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/product.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Drag & Drop File Upload</title>
-    <link rel="stylesheet" href="/admin/assets/css/app.css"/>
-</head>
-<body>
-<div class="container-xxl flex-grow-1 container-p-y">
-    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">UI elements /</span> Product</h4>
+<link rel="stylesheet" href="/admin/assets/css/app.css"/>
+<h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">UI elements /</span> Product</h4>
+<form action="/upload" method="post">
     <div class="row">
         <!-- Basic Badges -->
         <div class="col-lg">
@@ -16,40 +9,22 @@
                     <div class="row">
                         <!-- Basic Badges -->
                         <div class="col-lg">
-                            <div class="cards">
-                                <div class="top">
-                                    <p>Dropzone Image Uploading</p>
-                                    <br>
-                                    <button type="button">Upload</button>
-                                </div>
-                                <form style="width: 100%;
-    height: 100px;
-    border-radius: 5px;
-    border: 2px dashed #d5d5e1;
-    color: #c8c9dd;
-    font-size: 0.9rem;
-    font-weight: 500;
-    background: #dfe3f259;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    user-select: none;
-    margin-top: 20px;" action="/upload" method="post" class="dragover">
-        <span class="inner">Drop Image here or <span class="select">Browse</span>
-        </span>
-                                    <input name="file" type="file" class="file" multiple/>
-                                </form>
-                                <div class="container">
+                            <div class="top">
+                                <p>Dropzone Image Uploading</p>
+                                <br>
+                                <button type="button">Upload</button>
+                            </div>
+                            <div action="/upload" method="post" class="dragover form-dropzone select dropzone">
+                                <span class="inner">Drop Image here or <span>Browse</span>
+                                </span>
+                                <input name="file" type="file" class="file mx-3" multiple />
+                            </div>
+                            <div class="container">
 
-                                </div>
                             </div>
                         </div>
                     </div>
-                    <!--                </div>-->
                     <hr>
-
-                    <!--                <div class="card-body">-->
                     <div class="mb-3 row">
                         <label class="col-md-2 col-form-label">Code</label>
                         <div class="col-md-10">
@@ -588,8 +563,7 @@
             </div>
         </div>
     </div>
-</div>
-
+</form>
 <div class="row">
     <!-- Button with Badges -->
     <div class="col-lg">
@@ -609,30 +583,25 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <c:forEach var="item" items="${items}">
-                        <tr>
-                            <td>${item.id}</td>
-                            <td>${item.name}</td>
-                            <td>${item.price}</td>
-                            <td>${item.category.name}</td>
-                            <td><p><img src="/static/images/${item.image}" alt="car_image"
-                                        style="height: 50px; width: 50px"/></p>
-                            </td>
-                            <td>
-                                <a class="btn btn-sm btn-primary" href="/admin/product/edit/${item.id}">Edit</a>
-                                <a class="btn btn-sm btn-danger" href="/admin/product/delete/${item.id}">Delete</a>
-                            </td>
-                        </tr>
-                    </c:forEach>
+                    <tr>
+                        <td>${item.id}</td>
+                        <td>${item.name}</td>
+                        <td>${item.price}</td>
+                        <td>${item.category.name}</td>
+                        <td><p><img src="" alt="car_image"
+                                    style="height: 50px; width: 50px"/></p>
+                        </td>
+                        <td>
+                            <a class="btn btn-sm btn-primary" href="/admin/product/edit/${item.id}">Edit</a>
+                            <a class="btn btn-sm btn-danger" href="/admin/product/delete/${item.id}">Delete</a>
+                        </td>
+                    </tr>
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
 </div>
-</div>
 <hr>
 <!-- Script -->
 <script src="/admin/assets/js/api.js"></script>
-</body>
-</html>
