--- a/webBanTiVi/src/main/resources/templates/admin/page/staff.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/staff.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Forms/</span> Staff Layouts</h4>
 <hr>
 <div class="col-md-12">
@@ -13,7 +6,7 @@
         <!-- Account -->
         <div class="card-body">
             <div class="d-flex align-items-start align-items-sm-center gap-4">
-                <img src="../assets/img/avatars/1.png" alt="user-avatar" class="d-block rounded" height="100"
+                <img src="/admin/assets/img/avatars/default-avatar.jpeg" alt="user-avatar" class="d-block rounded" height="100"
                      width="100" id="uploadedAvatar">
                 <div class="button-wrapper">
                     <label for="upload" class="btn btn-primary me-2 mb-4" tabindex="0">
@@ -197,25 +190,9 @@
                 </tr>
                 </thead>
                 <tbody>
-                <c:forEach var="item" items="${items}">
-                    <tr>
-                        <td>${item.id}</td>
-                        <td>${item.name}</td>
-                        <td>${item.price}</td>
-                        <td>${item.category.name}</td>
-                        <td><p><img src="/static/images/${item.image}" alt="car_image"
-                                    style="height: 50px; width: 50px"/></p>
-                        </td>
-                        <td>
-                            <a class="btn btn-sm btn-primary" href="/admin/product/edit/${item.id}">Edit</a>
-                            <a class="btn btn-sm btn-danger" href="/admin/product/delete/${item.id}">Delete</a>
-                        </td>
-                    </tr>
-                </c:forEach>
                 </tbody>
             </table>
         </div>
     </div>
 </div>
-</body>
-</html>
+<script th:src="@{/admin/assets/js/pages-account-settings-account.js}"></script>
