--- a/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="col-lg-3 col-md-3">
                 <div class="header__logo">
-                    <a href="/"><img src="/user/img/logo.png" alt=""></a>
+                    <a href="/"><img th:src="@{/image/logochuan-04.png}" alt="" style="width: 250px"></a>
                 </div>
             </div>
             <div class="col-lg-7 col-md-7">
