mạnh sửa lại giao diện order,config properties

--- a/webBanTiVi/src/main/resources/static/user/css/_order/_order_detail.css
+++ b/webBanTiVi/src/main/resources/static/user/css/_order/_order_detail.css
@@ -320,7 +320,7 @@ p {
 }
 /*hehe*/
 .mbaGbp {
-    padding: 12px 24px;
+    /*padding: 12px 24px;*/
     background-color: #fafafa;
 }
 user agent stylesheet
