--- a/webBanTiVi/src/main/resources/templates/user/page/_order/_order_detail.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/_order/_order_detail.html
@@ -1,6 +1,6 @@
 <main class="AJo2nP">
-    <section><h2 class="a11y-hidden"></h2></section>
-    <section>
+    <div><h2 class="a11y-hidden"></h2></div>
+    <div>
         <h2 class="a11y-hidden"></h2>
         <div class="cBtCqV">
             <button class="yO9lYJ">
@@ -10,7 +10,7 @@
                         <path d="m8.5 11c-.1 0-.2 0-.3-.1l-6-5c-.1-.1-.2-.3-.2-.4s.1-.3.2-.4l6-5c .2-.2.5-.1.7.1s.1.5-.1.7l-5.5 4.6 5.5 4.6c.2.2.2.5.1.7-.1.1-.3.2-.4.2z"></path>
                     </g>
                 </svg>
-                <span>TRỞ LẠI</span>
+                <a href="/layout_order"><span>TRỞ LẠI</span></a>
             </button>
             <div class="w8MDQX">
                 <span tabindex="0">MÃ ĐƠN HÀNG. 230713U7DG4RWU</span>
@@ -18,11 +18,11 @@
                 <span class="capx2D" aria-role="region" aria-live="polite" tabindex="0">Đơn hàng đã hoàn thành</span>
             </div>
         </div>
-    </section>
-    <section>
+    </div>
+    <div>
         <h2 class="a11y-hidden"></h2>
-    </section>
-    <section>
+    </div>
+    <div>
         <h2 class="a11y-hidden"></h2>
         <div class="O2KPzo">
             <div class="mn7INg xFSVYg"></div>
@@ -38,8 +38,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section><h2 class="a11y-hidden"></h2>
+    </div>
+    <div><h2 class="a11y-hidden"></h2>
         <div class="O2KPzo">
             <div class="mn7INg xFSVYg"></div>
             <div class="mn7INg EfbgJE"></div>
@@ -71,9 +71,9 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section><h2 class="a11y-hidden"></h2></section>
-    <section><h2 class="a11y-hidden"></h2>
+    </div>
+    <div><h2 class="a11y-hidden"></h2></div>
+    <div><h2 class="a11y-hidden"></h2>
         <div>
             <div class="ICo-FQ">
                 <div class="-evyOM" tabindex="0">
@@ -97,8 +97,8 @@
                         class="stardust-button XIFvXD">Yêu cầu Hóa đơn điện tử</button></span></div>
             </div>
         </div>
-    </section>
-    <section>
+    </div>
+    <div>
         <h2 class="a11y-hidden"></h2>
         <div>
             <div class="cmp831">
@@ -144,12 +144,12 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section><h2 class="a11y-hidden">odp_accessibility_component_1</h2></section>
-    <section><h2 class="a11y-hidden"></h2></section>
-    <section><h2 class="a11y-hidden"></h2>
+    </div>
+    <div><h2 class="a11y-hidden">odp_accessibility_component_1</h2></div>
+    <div><h2 class="a11y-hidden"></h2></div>
+    <div><h2 class="a11y-hidden"></h2>
         <div>
-            <section><h3 class="a11y-hidden"></h3>
+            <div><h3 class="a11y-hidden"></h3>
                 <div class="mbaGbp">
                     <div class="KrPQEI">
                         <div class="qCUYY8">
@@ -198,7 +198,7 @@
                     <div class="NuQDJM"></div>
                         <div class="FbLutl">
                             <div>
-                                <section><a class="x7nENX" aria-label=""
+                                <div><a class="x7nENX" aria-label=""
                                             href="/Áo-sơ-mi-nam-dài-tay-cao-cấp-Chất-liệu-lụa-mềm-mịn-kiểu-dáng-Hàn-Quốc-không-nhăn-không-xù-thấm-hút-mồ-hôi-i.192988971.4004426389">
                                     <div class="aybVBK"><img
                                             src="https://down-vn.img.susercontent.com/file/557e45a554306b676ef8f761e800ba25_tn"
@@ -352,7 +352,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </a></section>
+                                </a></div>
                             </div>
                             <div class="Cde7Oe"></div>
                         </div>
@@ -409,10 +409,10 @@
                     <div class="_4aGAAO"><span>Vui lòng thanh toán <span
                             class="WAB0Vg">₫74.000</span> khi nhận hàng. </span></div>
                 </div>
-            </section>
+            </div>
         </div>
-    </section>
-    <section><h2 class="a11y-hidden"></h2>
+    </div>
+    <div><h2 class="a11y-hidden"></h2>
         <div class="TX9IwS">
             <div class="O2KPzo">
                 <div class="mn7INg xFSVYg"></div>
@@ -434,6 +434,6 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section><h2 class="a11y-hidden"></h2></section>
+    </div>
+    <div><h2 class="a11y-hidden"></h2></div>
 </main>
