--- a/webBanTiVi/src/main/resources/templates/user/page/_order/_order_processing.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/_order/_order_processing.html
@@ -1,6 +1,6 @@
 
 <div class="container ">
-    <section class="VYJdTQ" aria-role="tablist"><h2 class="a11y-hidden"></h2>
+    <div class="VYJdTQ" aria-role="tablist"><h2 class="a11y-hidden"></h2>
         <a class="OFl2GI gAImis" title="Tất cả" aria-role="tab" aria-selected="true" aria-controls="olp_panel_id-0.8223048832128013" id="olp_tab_id-0.8223048832128013" href="/layout_order/completed">
             <span class="_20hgQK">Tất cả</span></a>
         <a class="OFl2GI" title="Chờ thanh toán" aria-role="tab" aria-selected="false" aria-controls="olp_panel_id-0.9555926117255007" id="olp_tab_id-0.9555926117255007" href="/layout_order/processing"><span
@@ -9,11 +9,12 @@
             <span class="_20hgQK">Hoàn thành</span></a>
         <a class="OFl2GI" title="Trả hàng/Hoàn tiền" aria-role="tab" aria-selected="false" aria-controls="olp_panel_id-0.7916138988099599" id="olp_tab_id-0.7916138988099599" href="/user/purchase/?type=12">
             <span class="_20hgQK">Trả hàng</span></a>
-    </section>
+    </div>
+    <h2 class="a11y-hidden"></h2>
     <div class="hiXKxx">
         <div>
             <div class="x0QT2k">
-                <section><h3 class="a11y-hidden"></h3>
+                    <h3 class="a11y-hidden"></h3>
                     <div class="KrPQEI">
                         <div class="qCUYY8">
                             <div class="_0RxYUS">
@@ -45,16 +46,16 @@
                             <div class="V+w7Xs" tabindex="0">Đang đăt hàng</div>
                         </div>
                     </div>
-                </section>
+
                 <div class="FycaKn"></div>
-                <section>
+
                     <h3 class="a11y-hidden"></h3>
                     <a aria-label="" href="/user/purchase/order/142935682270139?type=6">
                         <div>
                             <div class="_0OiaZ-">
                                 <div class="FbLutl">
                                     <div>
-                                        <section>
+
                                             <div class="x7nENX">
                                                 <div class="aybVBK"><img
                                                         src="https://down-vn.img.susercontent.com/file/557e45a554306b676ef8f761e800ba25_tn"
@@ -77,13 +78,14 @@
                                                             class="-x3Dqh OkfGBc">₫74.000</span></div>
                                                 </div>
                                             </div>
-                                        </section>
+
                                     </div>
                                     <div class="Cde7Oe"></div>
                                 </div>
                             </div>
                         </div>
-                    </a></section>
+                    </a>
+
                 <div class="B8+ewx"></div>
             </div>
         </div>
@@ -106,7 +108,7 @@
         </div>
         <div class="AM4Cxf">
             <div class="qtUncs"></div>
-            <section class="EOjXew _4IR9IT"><h3 class="a11y-hidden"></h3>
+            <div class="EOjXew _4IR9IT"><h3 class="a11y-hidden"></h3>
                 <div class="PF0-AU">
                     <div>
                         <button class="stardust-button stardust-button--primary WgYvse"><a href="/return">Trả hàng</a></button>
@@ -117,7 +119,7 @@
                         <button class="stardust-button stardust-button--secondary WgYvse">Liên hệ Người bán</button>
                     </div>
                 </div>
-            </section>
+            </div>
         </div>
     </div>
 </div>
