--- a/webBanTiVi/src/main/resources/static/user/css/_order/_order_completed.css
+++ b/webBanTiVi/src/main/resources/static/user/css/_order/_order_completed.css
@@ -285,3 +285,26 @@ a {
 .gAImis{
     color: #ee4d2d;
 }
+
+.VrgkXA {
+    padding: 12px 0;
+    margin: 12px 0;
+    display: flex;
+    align-items: center;
+    box-shadow: 0 1px 1px 0 rgba(0,0,0,.05);
+    color: #212121;
+    background: #eaeaea;
+    border-radius: 2px;
+}
+.VrgkXA>svg {
+    margin: 0 15px;
+    stroke: #bbb;
+}
+.VrgkXA>input {
+    flex: 1;
+    font-size: 14px;
+    line-height: 16px;
+    border: 0;
+    outline: none;
+    background-color: inherit;
+}
